--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 .index {
   display: grid;
   grid-auto-flow: column;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: 1fr 0.15fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 }
 
