--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   font-size: 2.5rem;
   white-space: nowrap;
   font-weight: bold;
+  cursor: pointer;
 
   background: url("assets/bg.png");
   background-color: rgba(0, 0, 0, 0.2);
