--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@ html {
   background: url("assets/bg.png");
   background-size: cover;
   height: 100%;
+  cursor: url('assets/cursor.png'), auto;
 }
 
 body {
+  /* tinkerbell.js causes scrollbars to pop */
+  overflow: hidden;
+
   max-width: 50rem;
   margin: 0 auto;
   height: 100%;
@@ -38,7 +42,6 @@ body {
   font-size: 2.5rem;
   white-space: nowrap;
   font-weight: bold;
-  cursor: pointer;
 
   background: url("assets/bg.png");
   background-color: rgba(0, 0, 0, 0.2);
