--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
 
 .index-button {
   text-align: center;
-  background-color: #081277;
   padding: 1rem;
   text-decoration: none;
   font-size: 2.5rem;
@@ -46,6 +45,10 @@ body {
   background: url("assets/bg.png");
   background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: multiply;
+}
+
+.burnt {
+  filter: opacity(30%) blur(3px);
 }
 
 .index-page-topic-title {
