--- a/style.css
+++ b/style.css
@@ -47,6 +47,15 @@ body {
   background-blend-mode: multiply;
 }
 
+.glow-on-hover {
+  box-shadow: 0 0 rgba(145, 92, 182, 0.4);
+  transition: box-shadow .15s;
+}
+
+.glow-on-hover:hover {
+  box-shadow: 0 0 40px rgba(145, 92, 182, 0.4);
+}
+
 .burnt {
   filter: opacity(30%) blur(3px);
 }
