--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
   background: url("assets/bg.png");
   background-size: cover;
   height: 100%;
-  cursor: url('assets/cursor.png'), auto;
+  cursor: url("assets/cursor.png"), auto;
 }
 
 body {
@@ -48,12 +48,12 @@ body {
 }
 
 .glow-on-hover {
-  box-shadow: 0 0 rgba(145, 92, 182, 0.4);
-  transition: box-shadow .15s;
+  box-shadow: 0 0 rgba(145, 92, 182, 0.8);
+  transition: box-shadow 1s;
 }
 
 .glow-on-hover:hover {
-  box-shadow: 0 0 40px rgba(145, 92, 182, 0.4);
+  box-shadow: 0 0 30px rgba(145, 92, 182, 0.8);
 }
 
 .burnt {
