--- a/style.css
+++ b/style.css
@@ -23,11 +23,9 @@ body {
     url("assets/font/drugulinclm-bold-webfont.woff") format("woff");
 }
 
-.index {
+#index {
   display: grid;
   grid-auto-flow: column;
-  grid-template-rows: 1fr 0.15fr 1fr 1fr 1fr;
-  grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 }
 
