--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   font-family: "Drugulin";
+  font-size: 1.4rem;
   background: url("assets/bg.png");
   background-size: cover;
   height: 100%;
