--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 html {
   font-family: "Drugulin";
   font-size: 1.4rem;
-  background: url("assets/bg.png");
+  background: url("assets/bg.webp");
   background-size: cover;
   height: 100%;
-  cursor: url("assets/cursor.png"), auto;
+  cursor: url("assets/cursor.webp"), auto;
 }
 
 body {
-  max-width: 50rem;
   margin: 0 auto;
   height: 100%;
 
@@ -38,7 +37,7 @@ body {
   white-space: nowrap;
   font-weight: bold;
 
-  background: url("assets/bg.png");
+  background: url("assets/bg.webp");
   background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: multiply;
 }
