--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ body {
 
 .question-page-text {
   color: white;
-  font-size: 8rem;
+  font-size: 5rem;
+  max-width: 65rem;
+  direction: rtl;
+  text-align: center;
   font-weight: bold;
   text-shadow: 7px 5px 3px black;
 }
