--- a/style.css
+++ b/style.css
@@ -85,3 +85,18 @@ body {
   background: #e6e6e6;
   padding: 3px;
 }
+
+.score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: white;
+  text-shadow: 5px 3px 2px black;
+}
+
+.score .shekel {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  margin-right: 0.2rem;
+}
