--- a/style.css
+++ b/style.css
@@ -100,3 +100,10 @@ body {
   margin-top: 0.5rem;
   margin-right: 0.2rem;
 }
+
+.splash-page {
+  background-image: url("assets/splash.webp");
+  width: 100%;
+  height: 100%;
+  cursor: none;
+}
