--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
 }
 
 .splash-page {
-  background-image: url("assets/splash.webp");
+  background-image: url("assets/green-splash.webp");
   width: 100%;
   height: 100%;
   cursor: none;
