--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ body {
 
 .splash-page {
   background-image: url("assets/green-splash.webp");
+  background-size: cover;
   width: 100%;
   height: 100%;
   cursor: none;
