--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
 html {
   font-family: "Drugulin";
   font-size: 1.1rem;
-  background: url("assets/bg.webp");
+  background: url("/assets/bg.webp");
   background-size: cover;
   height: 100%;
-  cursor: url("assets/cursor.webp"), auto;
+  cursor: url("/assets/cursor.webp"), auto;
 }
 
 body {
@@ -19,8 +19,8 @@ body {
 
 @font-face {
   font-family: "Drugulin";
-  src: url("assets/font/drugulinclm-bold-webfont.ttf"),
-    url("assets/font/drugulinclm-bold-webfont.woff") format("woff");
+  src: url("/assets/font/drugulinclm-bold-webfont.ttf"),
+    url("/assets/font/drugulinclm-bold-webfont.woff") format("woff");
 }
 
 #index {
