--- a/assets/style.css
+++ b/assets/style.css
@@ -37,7 +37,7 @@ body {
   white-space: nowrap;
   font-weight: bold;
 
-  background: url("assets/bg.webp");
+  background: url("/assets/bg.webp");
   background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: multiply;
 }
@@ -106,7 +106,7 @@ body {
 }
 
 .splash-page {
-  background-image: url("assets/green-splash.webp");
+  background-image: url("/assets/green-splash.webp");
   background-size: cover;
   width: 100%;
   height: 100%;
