--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
 html {
   font-family: "Drugulin";
   font-size: 1.1rem;
-  background: url("/assets/bg.webp");
+  background: url("/bg.webp");
   background-size: cover;
   height: 100%;
-  cursor: url("/assets/cursor.webp"), auto;
+  cursor: url("/cursor.webp"), auto;
 }
 
 body {
@@ -19,8 +19,8 @@ body {
 
 @font-face {
   font-family: "Drugulin";
-  src: url("/assets/font/drugulinclm-bold-webfont.ttf"),
-    url("/assets/font/drugulinclm-bold-webfont.woff") format("woff");
+  src: url("/font/drugulinclm-bold-webfont.ttf"),
+    url("/font/drugulinclm-bold-webfont.woff") format("woff");
 }
 
 #index {
@@ -37,7 +37,7 @@ body {
   white-space: nowrap;
   font-weight: bold;
 
-  background: url("/assets/bg.webp");
+  background: url("/bg.webp");
   background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: multiply;
 }
@@ -106,7 +106,7 @@ body {
 }
 
 .splash-page {
-  background-image: url("/assets/green-splash.webp");
+  background-image: url("/green-splash.webp");
   background-size: cover;
   width: 100%;
   height: 100%;
